<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:id="@+id/cl_row"
    android:background="@drawable/edittext_border"
    android:padding="8dp">

    <ImageView
        android:id="@+id/shopImageView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:contentDescription="@string/shop_name"
        android:scaleType="centerCrop"
        android:src="@drawable/letter_e_svgrepo_com"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/dividerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textContainer"
        app:layout_constraintWidth_percent="0.2"/>

    <LinearLayout
        android:id="@+id/textContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/dividerView"
        app:layout_constraintStart_toEndOf="@+id/shopImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shop_name"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#000" />

        <TextView
            android:id="@+id/contactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_number"
            android:textSize="14sp"
            android:textColor="#666" />

        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="14sp"
            android:textColor="#666" />
    </LinearLayout>

    <View
        android:id="@+id/dividerView"
        android:layout_width="0dp"
        android:layout_height="0.2dp"
        android:background="@color/blue"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintTop_toBottomOf="@id/shopImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonContainer"/>

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/dividerView"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/click_here_to_place_order"
            android:textStyle="bold|italic"
            android:textColor="@color/green"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginStart="5dp"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
